--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "game_manager",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.2.2",
+    "@rails/webpacker": "^3.3.0",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.4"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "^3.1.0"
   }
 }
